Add delete card, insert card feature

--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "author": "cheBandoneon",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.0",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "css-loader": "^1.0.1",
