--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.9",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-redux": "^6.0.1",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
